--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,80 @@
-:root{
-    --corFundo: #0A3871;
-    --corLetra: 0A3871;
+:root {
+	--corFundo: #0A3871;
+	--corLetra: 0A3871;
 }
 
 body {
-	background:#E5E5E5 ;
+	background: #E5E5E5;
 	font-family: 'Inter', sans-serif;
-    margin: 20px 0;
+	margin: 20px 0;
 }
 
 .principal {
-    margin-left: 100px;
-    margin-top: 20px;
-    display: flex;
+	margin-left: 100px;
+	margin-top: 20px;
+	display: flex;
 }
+
 .texto-entrada {
 	border: none;
 	color: var(--corFundo);
-    height:600px;
-    border-radius: 10px;    
+	height: 600px;
+	border-radius: 10px;
 }
 
-::placeholder { color: var(--corFundo); }
+::placeholder {
+	color: var(--corFundo);
+}
+
 .texto-entrada:focus {
 	outline: none;
 }
 
 .aviso {
-    display: flex;
-    margin: 10px; 
+	display: flex;
+	margin: 10px;
 }
 
 .aviso img {
-    width: 16px;
-    height: 16px;
+	width: 16px;
+	height: 16px;
 }
 
 .aviso p, .final p {
-   padding-left: 10px;
-   vertical-align: auto;
+	padding-left: 10px;
+	vertical-align: auto;
 }
+
 .texto-entrada, .botoes, .texto-saida {
-    font.weight: 400;
-    font-size: 32px;
-    line-height: 150%;
+	font-weight:400 ;
+	font-size: 32px;
 }
 
 .direita {
-    margin-left: 100px;
+	margin-left: 100px;
 }
 
 .inicio {
-    display: block;
-    text-align: center;
-    height: 710px;
-    width: 400px;
-    background: white;
-    border-radius: 32px;
+	display: block;
+	text-align: center;
+	height: 710px;
+	width: 400px;
+	background: white;
+	border-radius: 32px;
 	padding-left: 20px;
-    }
+}
 
 .inicio img {
-    padding-top: 80px;
+	padding-top: 80px;
 }
 
 .inicio h1 {
-    padding: 20px;
-    font-size: 30px;  
+	padding: 20px;
+	font-size: 30px;
 }
 
 .inicio p {
-    padding: 20px;
+	padding: 20px;
 }
 
 .texto-saida {
@@ -88,11 +92,14 @@ body {
 
 .final {
 	display: none;
-    text-align: center;
+	text-align: center;
 }
+
 /* configurações dos botões */
 
-.btn-code, .btn-decode, .btn-copiar {
+.btn-code,
+.btn-decode,
+.btn-copiar {
 	height: 67px;
 	width: 336px;
 	font-size: 20px;
@@ -117,12 +124,18 @@ body {
 .btn-copiar {
 	border-radius: 24px;
 	color: #0A3871;
-    margin: 20px auto;
+	margin: 20px auto;
 }
 
 
 footer {
 	margin-left: 100px;
-	padding: 10px;
+	padding: 20px;
 	font-size: 16px;
+}
+
+.linkedin, .github, .email {
+	width: 20px;
+	height: 20px;
+	padding: 10px;
 }
